2013-04-23  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Do not hopelessly wait 5 seconds if waitpid
	  return -1.

2013-04-19  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amvault.pl: Use DLE allow-split and device LEOM property.

2013-04-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Fix parsing command overwrite with '-'.
	  Fix small --print-source bug.

2013-04-15  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amdump.pl: Keep amflush as a relative symlink.
	* server-src/logfile.c: Keep log as a relative symlink.

2013-04-13 Dan Locks <dwlocks@zmanda.com>
	* packaging/sun-pkg/buildpkg: remove "use warnings" for solaris 8 compatibility

2013-04-12  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: Document many storage setting.

2013-04-12  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Config.pl: Add append keyword for dump-selection check.

2013-04-12  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Add APPEND keyword to tag and dump-selection.
	* man/xml-source/amanda.conf.5.xml: Document tag and dump-selection.

2013-04-12  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Parse erase-volume in a storage.
	* common-src/conffile.h: Add STORAGE_ERASE_VOLUME.
	* man/xml-source/amanda.conf.5.xml: Document erase-volume.
	* perl/Amanda/Config.swg: Add STORAGE_ERASE_VOLUME.
	* perl/Amanda/Changer.pm: Fix warning when meta not set.
	* perl/Amanda/IPC/LineProtocol.pm:Allow delayed start of reading.
	* perl/Amanda/Storage.pm: New erase_no_retention method.
	* perl/Amanda/Taper/Controller.pm: Call $storage->erase_no_retention().
	* perl/Amanda/Taper/Scan.pm: Use Debug qw( debug ).
	* server-src/amrmtape.pl: hanlde multiple storage.

2013-04-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amadmin.c: Add force-level-1 command.
	* man/xml-source/amadmin.8.xml: Document force-level-1 command.