@@ -1,3 +1,7 @@
+2013-04-24  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amvault.pl: Add --incrs-only argument.
+	* man/xml-source/amvault.8.xml: Document --incrs-only argument.
+
 2013-04-23  Jean-Louis Martineau <martineau@zmanda.com>
 	* amandad-src/amandad.c: Do not hopelessly wait 5 seconds if waitpid
 	  return -1.
